# axum-quickstart

./: .gitignore  Cargo.toml  tailwind.config.js
content/: home.md
src/: handlers.rs  main.rs  middleware.rs  state.rs
src/components/: c.rs
src/handlers/: form.rs  form_handlers.rs  mod.rs  view.rs  view_handlers.rs
src/templates/: templates.rs
static/css/: animus.css  index.css  output.css
static/js/: index.js
templates/: base.html
templates/page/: admin_panel.html  login.html
templates/partial/: admin_nav_menu.html  header.html  login_form.html  nav_shell.html
templates/shell/: base.html
templates/view/: admin_panel.html  login.html
