[package]
name = "axum-quickstart"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"]}
axum = { version = "0.7.5" }
tower = { version = "0.4.13" }
futures-util = { version = "0.3.30" }
tower-http = { version = "0.5.2", features = ["full"] }
askama = "0.12.1"
markdown = "1.0.0-alpha.17"
syntect = "5.0"
serde = { version = "1.0.203", features = ["derive"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
